# e25e1_3

./: README.md  Untitled.ipynb  pyproject.toml  requirements.txt  requirements_311.txt
conf/base/: catalog.yml  parameters.yml
conf/base/parameters/: classification.yml  regression.yml
conf/prod/: catalog.yml
src/kobe/: pipeline_registry.py  settings.py
src/kobe/pipelines/classification/: __init__.py  nodes.py  pipeline.py
src/kobe/pipelines/prepare_data/: __init__.py  nodes.py  pipeline.py
src/kobe/pipelines/regression/: __init__.py  nodes.py  pipeline.py
streamlit_app/: app.py
tests/pipelines/classification/: test_pipeline.py
tests/pipelines/regression/: test_pipeline.py
